--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,10 +14,11 @@
 /**Header Styles****/
 .header{
     background-color: white;
+    width: 100vw;
     height: 10vh;
     justify-content: space-between;
     position: fixed;
-    box-shadow: 1px 1px 10px 2px rgb(220, 192, 247);
+    box-shadow: 1px 1px 10px 2px #dcc0f7;
 }
 .header p{
     font-size: 40px;
@@ -45,7 +46,9 @@ nav a:hover{
     background-image: url('../images/computer.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
+    height: 120vh;
+    width: 100vw;
+    justify-content: space-around;
 }
 .overlay{
     display: flex;
@@ -69,17 +72,19 @@ nav a:hover{
 .overlay img{
     flex: 1;
     width: 400px;
-    text-align: left;
+    text-align: center;
+    padding-right: 100px;
     
 }
 .profile-description{
-    flex: 3;
+    flex: 2;
 }
 .social{
     flex: 1;
     display: flex;
     flex-direction: column;
     text-align: left;
+    padding-left: 100px;
     
 }
 .social a{
@@ -298,5 +303,70 @@ nav a:hover{
 @media screen and (max-width : 480px){
     .row{
         flex-direction: column;
+    }
+    .home{
+        width: 100%;
+    }
+    .header{
+        width: 100%;
+        height: 20vh;
+    }
+    .overlay{
+        padding-top: 200px;
+        justify-content: center;
+        flex-direction: column-reverse;
+        text-align: center;
+    }
+    .overlay img{
+        width: 200px;
+        text-align: center;
+        padding: 50px 0;
+        
+    }
+    .profile-description p{
+        font-weight: bold;
+        font-size:40px;
+        color: #ffffff;
+    }
+    .profile-description h1{
+        font-size:50px;
+        color:#000000;
+    }
+    .social{
+        flex-direction:row;
+        text-align: center;
+        padding: 50px 0;
+        
+    }
+    .social a{
+        padding: 0 20px;
+        
+    }
+    .profile-description{
+        flex: 1;
+    }
+    .about{
+        padding: 200px 50px;
+   
+    }
+    .about h1{
+        font-size: 40px;
+        padding-bottom: 50px;
+    }
+    .about p{
+        font-size: 18px;
+    }
+  
+    .skills h1{
+        font-size: 40px;
+        padding-bottom: 0px;
+    }
+    .skills h2{
+        font-size: 20px;
+    }
+    .skills .row{
+        justify-content: space-around;
+        text-align: left;
+    
     }
 }
